src/objects/Deleted_Time_Sheet_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deleted_Time_Sheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Type__c</fullName>
        <label>Bonus Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckIn_Location__c</fullName>
        <label>CheckIn Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Checkout_Location__c</fullName>
        <label>Checkout Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Half_Hour_Lunch_Break__c</fullName>
        <label>Half Hour Lunch Break</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotel_Cost__c</fullName>
        <label>Hotel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labor Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Posted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deleted_Time_Sheet_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Client_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project/Client/Job</label>
        <referenceTo>Install_Project__c</referenceTo>
        <relationshipLabel>Deleted Time Sheet Entries</relationshipLabel>
        <relationshipName>Deleted_Time_Sheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install-Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Bonus Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Bonus Warranty Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Time Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First 2 Weeks of Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time_Off_Site__c</fullName>
        <label>Start Time Off Site</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time_On_Site__c</fullName>
        <label>Start Time On Site</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stayed_Overnight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stayed Overnight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Sheet_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Sheet Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Deleted Time Sheet Entries</relationshipLabel>
        <relationshipName>Deleted_Time_Sheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Purpose</label>
        <referenceTo>Timesheet_Purpose__c</referenceTo>
        <relationshipLabel>Deleted Time Sheet Entries</relationshipLabel>
        <relationshipName>Deleted_Time_Sheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Deleted Time Sheet Entry</label>
    <nameField>
        <label>Deleted Time Sheet Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deleted Time Sheet Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>